--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
           <li><a href="#portfolio">portfolio</a></li>
           <li><a href="#about">about</a></li>
           <li><a href="#contact">contact</a></li>
+          <li>test 1</li>
+          <li>test 2</li>
         </ul>
         <ul>
           <li></li>
